# farm-operator

./: Cargo.toml  Dockerfile  README.md  app.yaml  platform.sh
.github/workflows/: publish.yaml
example/step-1/: Cargo.toml  Dockerfile
example/step-2/: Cargo.toml  Dockerfile
example/step-2/src/: main.rs
example/step-3/: Dockerfile
example/step-3/src/: main.rs  resources.rs
example/step-3/src/resources/: farmpod.rs  llama.rs
src/: main.rs  resources.rs
src/resources/: lama.rs  llama.rs
step-1/: Cargo.toml  Dockerfile
step-1/src/: main.rs
step-2/: Cargo.toml  Dockerfile
step-2/src/: main.rs
step-2/src/resources/: llama.rs
step-3/: Cargo.toml  Dockerfile
step-3/src/: impersonation.rs  main.rs
step-3/src/resources/: farmpod.rs  llama.rs
