[package]
name = "farm-operator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.6"
axum-server = { version = "0.4", features = ["tls-rustls"] }
k8s-openapi = { version = "0.17", features = ["v1_24"] }
rcgen = "0.10"
tokio = { version = "1", features = ["full"] }

[workspace]
members = [
	"example/*"
]

# Rusttls returns UnsupportedNameType error with certificates issued with CN=<ip-address>
# Unfortunately such issued certificates are used in cloud providers like GCP
# 
# This replaces all uses of rustls in dependency tree to use the patched version
[patch.crates-io]
rustls = { git = "https://github.com/metalbear-co/rustls", branch = "feat-ip-address" }
