[package]
name = "farm-operator-3"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0.6"
axum-server = { version = "0.4", features = ["tls-rustls"] }
chrono = "0.4"
k8s-openapi = { version = "0.17", features = ["v1_24"] }
kube = { version = "0.78", default-features = false, features = ["client", "derive", "rustls-tls"] }
rcgen = "0.10"
serde = "1"
serde_json = "1"
schemars = "0.8"
tokio = { version = "1", features = ["full"] }
